Updated index.html w/ week 2 link.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<p>This is some demo content for the MSTU5003 Repository hosted on <a href="https://github.com">Github</a>.</p>
 		<ul>
 			<li><a href="./week01/visualize/index.html">Visualize</a></li>
+			<li><a href="./week02/index.html">Simple Structure</a></li>
 		</ul>
 	</div>
 </body>
