--- a/week02/index.html
+++ b/week02/index.html
@@ -10,7 +10,7 @@
 	<h1 id="assassination">#Assasination Classroom</h1>
 	<article>
 		<p>
-			Yusei Matsui is the mangaka on everybody’s mind. Author of the wildly popular Assassination Classroom, Matsui has created one of the best-loved, and bestselling, manga in both Japan and the U.S. in recent years. An action-packed comedy in which middle school misfits face off against their smiley-faced alien teacher, Assassination Classroom has been a consistent New York Times bestseller, and was adapted into a popular anime series and hit live-action film. Matsui joins us at Japan Society for an intimate conversation in conjunction with New York Comic Con, a rare opportunity to see the manga master in person. Moderated by animator/producer Justin Leach. Followed by a reception.
+			Yusei Matsui is the mangaka on everybody’s mind. Author of the wildly popular Assassination Classroom, Matsui has created one of the best-loved, and bestselling, manga in both Japan and the U.S. in recent years. An action-packed comedy in which middle school misfits face off against their smiley-faced alien teacher, Assassination Classroom has been a <img src="https://placehold.it/50x50"> consistent New York Times bestseller, and was adapted into a popular anime series and hit live-action film. Matsui joins us at Japan Society for an intimate conversation in conjunction with New York Comic Con, a rare opportunity to see the manga master in person. Moderated by animator/producer Justin Leach. Followed by a reception.
 		</p>
 		<p>
 			Tickets go on sale September 03, 2016 to October 15th. Discounts for students and senior citizens.
