Added inline-block demo and organized files.

--- a/week02/assassinationclassroom/index.html
+++ b/week02/assassinationclassroom/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Images, Anchors, Oh My</title>
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
 	<img src="images/korosensei.jpg" alt="Korosensei">
@@ -15,7 +15,9 @@
 		<p>
 			Tickets go on sale September 03, 2016 to October 15th. Discounts for students and senior citizens.
 		</p>
-		<div class="jumpLink"><a href="http://www.japansociety.org/event/mind-of-the-mangaka-yusei-matsui-creator-of-assassination-classroom">Get Tickets Now</a></div>
+		<div class="jumpLink">
+			<a href="http://www.japansociety.org/event/mind-of-the-mangaka-yusei-matsui-creator-of-assassination-classroom">Get Tickets Now</a>
+		</div>
 	</article>
 </body>
 </html>
