--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MSTU 5003 Repository</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div>
@@ -12,7 +13,10 @@
 		<ul>
 			<li><a href="./week01/visualize/index.html">Visualize</a></li>
 			<li><a href="./week02/index.html">Simple Structure</a></li>
+			<li><a href="./week03/index.html">Articulating Beginnings of Project</a></li>
 		</ul>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dicta optio libero, nemo ratione necessitatibus. Culpa veritatis vero odit aliquam, nostrum eum, adipisci dolores, numquam nisi eligendi similique fugit corporis!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorum, dolorem facere. Ut nobis minima nostrum vitae perferendis accusamus quis, ex sunt, eligendi fugiat in neque, nemo voluptate dolor amet!</p>
 	</div>
 </body>
 </html>
