--- a/week03/index.html
+++ b/week03/index.html
@@ -32,6 +32,7 @@
 			<article>
 				<h2>Article Title</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non asperiores ducimus, dolor nam <span>IMPORTANT PERSON</span>. Vero voluptates, mollitia explicabo qui, rerum ipsa veniam officiis accusantium <span>IMPORTANT PERSON</span> quod. Minima commodi enim accusantium omnis!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et officia vero asperiores, reprehenderit a velit obcaecati qui vitae porro unde atque id quam doloremque tenetur recusandae, voluptatum maiores excepturi sapiente.</p>
 			</article>
 			<article>
 				<h2>Article Title</h2>
@@ -49,20 +50,20 @@
 			</div>
 			<div>
 				Tweet Feed or something...
-				<ul>
-					<li>
-						<div>username</div>
-						<div>content</div>
+				<ul class="tweetfeed">
+					<li class="tweet">
+						<div class="tweetuser">username</div>
+						<div class="tweetContent">content</div>
 						<div>hashtags</div>
 					</li>
-					<li>
-						<div>username</div>
-						<div>content</div>
+					<li class="tweet">
+						<div class="tweetuser">username</div>
+						<div class="tweetContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus nemo iste tempore, corrupti sequi sit dolor veritatis expedita sint eligendi doloribus, quia ipsa obcaecati reprehenderit, a quas nostrum. Consequuntur, quibusdam.</div>
 						<div>hashtags</div>
 					</li>
-					<li>
-						<div>username</div>
-						<div>content</div>
+					<li class="tweet">
+						<div class="tweetuser">username</div>
+						<div class="tweetContent">content</div>
 						<div>hashtags</div>
 					</li>
 				</ul>
@@ -72,7 +73,7 @@
 
 	<!-- FOOTER -->
 	<div class="footer">
-		<span>copyright 2016</span><span>jmk2142@tc.columbia.edu</span>
+		<span class="info">copyright 2016</span><span class="info">jmk****@tc.columbia.edu</span>
 	</div>
 </body>
 </html>
