Updated link to MSTU5003 github repository

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div>
-		<p>This is some demo content for the MSTU5003 Repository hosted on <a href="https://github.com">Github</a>.</p>
+		<p>This is some demo content for the MSTU5003 Repository hosted on <a href="https://github.com/jmk2142/mstu5003">Github</a>.</p>
 		<ul>
 			<li><a href="./week01/visualize/index.html">Visualize</a></li>
 			<li><a href="./week02/assassinationclassroom/index.html">Simple Structure</a></li>
