Added student homepage links

--- a/index.html
+++ b/index.html
@@ -2,22 +2,64 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-widthinitial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MSTU 5003 Repository</title>
-	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div>
-		<p>This is some demo content for the MSTU5003 Repository hosted on <a href="https://github.com/jmk2142/mstu5003">Github</a>.</p>
-		<ul>
-			<li><a href="./week01/visualize/index.html">Visualize</a></li>
-			<li><a href="./week02/assassinationclassroom/index.html">Simple Structure</a></li>
-			<li><a href="./week03/index.html">Articulating Beginnings of Project</a></li>
-			<li><a href="./week04/index.html">Bootstrap and Forms</a></li>
-		</ul>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dicta optio libero, nemo ratione necessitatibus. Culpa veritatis vero odit aliquam, nostrum eum, adipisci dolores, numquam nisi eligendi similique fugit corporis!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorum, dolorem facere. Ut nobis minima nostrum vitae perferendis accusamus quis, ex sunt, eligendi fugiat in neque, nemo voluptate dolor amet!</p>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>MSTU5003<br><small>Theory and Programming of Interactive Media</small></h1>
+		</div>
+
+		<div class="row">
+			<div id="classDemos" class="col-md-6">
+				<p>This is some demo content for the MSTU5003 Repository hosted on <a href="https://github.com/jmk2142/mstu5003">Github</a>.</p>
+				<p>Demonstration page found at <a href="https://jmk2142.github.io/mstu5003/">https://jmk2142.github.io/mstu5003/</a></p>
+				<ul>
+					<li><a href="./week01/visualize/index.html">Visualize</a></li>
+					<li><a href="./week02/assassinationclassroom/index.html">Simple Structure</a></li>
+					<li><a href="./week03/index.html">Articulating Beginnings of Project</a></li>
+					<li><a href="./week04/index.html">Bootstrap and Forms</a></li>
+				</ul>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dicta optio libero, nemo ratione necessitatibus. Culpa veritatis vero odit aliquam, nostrum eum, adipisci dolores, numquam nisi eligendi similique fugit corporis!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorum, dolorem facere. Ut nobis minima nostrum vitae perferendis accusamus quis, ex sunt, eligendi fugiat in neque, nemo voluptate dolor amet!</p>
+			</div>
+			<div id="studentDemos" class="col-md-6">
+				<div id="studentPages">
+					<ul>
+						<li><a href="http://columbia.edu/~aas2306">aas2306</a></li>
+						<li><a href="http://columbia.edu/~ach2174">ach2174</a></li>
+						<li><a href="http://columbia.edu/~dy2333">dy2333</a></li>
+						<li><a href="http://columbia.edu/~gmg2155">gmg2155</a></li>
+						<li><a href="http://columbia.edu/~jc4620">jc4620</a></li>
+						<li><a href="http://columbia.edu/~jis2143">jis2143</a></li>
+						<li><a href="http://columbia.edu/~jl4735">jl4735</a></li>
+						<li><a href="http://columbia.edu/~lm3190">lm3190</a></li>
+						<li><a href="http://columbia.edu/~lds2138">lds2138</a></li>
+						<li><a href="http://columbia.edu/~mic2130">mic2130</a></li>
+						<li><a href="http://columbia.edu/~mim2148">mim2148</a></li>
+						<li><a href="http://columbia.edu/~mcv2132">mcv2132</a></li>
+						<li><a href="http://columbia.edu/~nrf2119">nrf2119</a></li>
+						<li><a href="http://columbia.edu/~st2839">st2839</a></li>
+						<li><a href="http://columbia.edu/~sz2524">sz2524</a></li>
+						<li><a href="http://columbia.edu/~sh3146">sh3146</a></li>
+						<li><a href="http://columbia.edu/~sj2663">sj2663</a></li>
+						<li><a href="http://columbia.edu/~sl4049">sl4049</a></li>
+						<li><a href="http://columbia.edu/~wm2355">wm2355</a></li>
+						<li><a href="http://columbia.edu/~xg2242">xg2242</a></li>
+						<li><a href="http://columbia.edu/~xl2630">xl2630</a></li>
+						<li><a href="http://columbia.edu/~yy2659">yy2659</a></li>
+						<li><a href="http://columbia.edu/~yr2314">yr2314</a></li>
+						<li><a href="http://columbia.edu/~yw2855">yw2855</a></li>
+						<li><a href="http://columbia.edu/~yll2110">yll2110</a></li>
+						<li><a href="http://columbia.edu/~yx2305">yx2305</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
