Added git-practice repo link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<li><a href="./week02/assassinationclassroom/index.html">Simple Structure</a></li>
 					<li><a href="./week03/index.html">Articulating Beginnings of Project</a></li>
 					<li><a href="./week04/index.html">Bootstrap and Forms</a></li>
+					<li><a href="https://github.com/jmk2142/git-practice">Github Repo: jmk2142/git-practice</a></li>
 				</ul>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dicta optio libero, nemo ratione necessitatibus. Culpa veritatis vero odit aliquam, nostrum eum, adipisci dolores, numquam nisi eligendi similique fugit corporis!</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorum, dolorem facere. Ut nobis minima nostrum vitae perferendis accusamus quis, ex sunt, eligendi fugiat in neque, nemo voluptate dolor amet!</p>
