Added DOM funtion manipulations

--- a/reviewSunday/index.html
+++ b/reviewSunday/index.html
@@ -5,8 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script src="functions.js"></script>
+
+	<button>Not Cool</button>
+	<button id="coolBtn">Cool</button>
+	<button>Not Cool</button>
+	<button>Not Cool</button>
+	<button>Not Cool</button>
+	<button>Not Cool</button>
+	<button>Not Cool</button>
+
+
+	<script src="functionsc.js"></script>
 </body>
 </html>
