--- a/reviewSunday/index.html
+++ b/reviewSunday/index.html
@@ -11,10 +11,10 @@
 
 	<button>Not Cool</button>
 	<button id="coolBtn">Cool</button>
+	<button class="cat">Not Cool</button>
 	<button>Not Cool</button>
 	<button>Not Cool</button>
-	<button>Not Cool</button>
-	<button>Not Cool</button>
+	<button class="cat">Not Cool</button>
 	<button>Not Cool</button>
 
 
