--- a/reviewSunday/index.html
+++ b/reviewSunday/index.html
@@ -48,11 +48,11 @@
 	<div class="question">
 		<label>
 			A
-			<input type="radio" class="incorrect" name="q2">
+			<input type="radio" class="incorrect active" name="q2">
 		</label>
 		<label>
 			B
-			<input type="radio" class="correct" name="q2">
+			<input type="radio" class="correct active" name="q2">
 		</label>
 		<label>
 			C
